// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`defaults > getDefaultRegistryConfig 1`] = `
{
  "extract": {
    "file": ".tw-patch/tw-class-list.json",
  },
  "output": {
    "file": ".tw-patch/tw-class-list.json",
    "pretty": true,
    "stripUniversalSelector": true,
  },
  "tailwind": {},
  "tailwindcss": {},
}
`;

exports[`defaults > getDefaultUserConfig 1`] = `
{
  "registry": {
    "extract": {
      "file": ".tw-patch/tw-class-list.json",
    },
    "output": {
      "file": ".tw-patch/tw-class-list.json",
      "pretty": true,
      "stripUniversalSelector": true,
    },
    "tailwind": {},
    "tailwindcss": {},
  },
  "transformer": {
    "disabled": false,
    "filter": [Function],
    "preserve": {
      "classes": [],
      "functions": [],
    },
    "registry": {
      "file": ".tw-patch/tw-class-list.json",
      "mapping": {
        "enabled": false,
        "file": ".tw-patch/tw-map-list.json",
        "loose": true,
      },
    },
    "sources": {
      "exclude": [],
      "include": [
        "/\\.(html|js|cjs|mjs|ts|cts|mts|jsx|tsx|vue|svelte|astro|elm|php|phtml|mdx|md)(?:$|\\?)/",
        "/\\.(css|less|sass|scss|styl|stylus|pcss|postcss|sss)(?:$|\\?)/",
      ],
    },
  },
}
`;
